# CED_Team_Project

./: .gitignore  README.md  pyproject.toml
.cache/docs/: document.txt
.cache/docs/embedding/: 0beda7ec-2a7d-5b58-b99f-965fc4256bb1  0c0f587a-3d67-511a-a172-434cd22edbef  10c925ca-12e1-5a22-ae37-2c9368e59915  11d72834-5904-55d2-b86c-84320cff31b8  12644c7c-489c-529f-ab70-ba2b9aa7808d  1bb38eb0-5b98-578f-963a-146181e1c364  1d60e244-0d87-5247-b4b4-0c027127465d  2b2c87dc-6431-540e-8c93-07ec7a5ba8ef  2b8e39b5-3136-5503-88cf-7d7f51e5bb91  325dfef9-e6f1-5ab8-aeb2-4a8d90c17d55  36e88deb-c678-5c2d-8404-2c335d934c0b  379d3c0f-8868-585f-bce3-4f678d6aff7f  429be829-a5a3-5a0a-8adf-ad48dd19de5c  436bdbe1-0dfa-5440-b36a-6ba20a6318a3  5a848837-b97b-54a3-bc86-51ac4d8400dc  692436d4-0b70-50f4-ac4c-b7a575b12ab2  7ef90397-b9e1-53dd-816a-cba6ed3a56f7  84e133a5-6f5c-587b-ba3b-6dc83b21f174  8a39e7fa-570c-5ce2-b7ba-f09dce0d5e7f  909bf097-7d8f-56fc-a8f6-1e32fd7992f8  96096d08-9025-5a26-81b7-12a202988b10  a803c3e6-1827-5265-8da6-f311b39642f5  afb2a369-0486-563d-bf19-1908778f388f  b9884090-a06f-5205-ad89-9c3a87304107  bf3bb756-ac87-53fb-8bfa-f94b9fc61e6b  defa5d19-47fd-5e0b-aa00-e9fc915d4a70  e1ab084e-ce93-5857-a16a-2cc9f15b3ca2  f1fbb4e9-758c-5afc-a557-8f2a20b1d6e7
.cache/prompt/: prompt.txt
Markdown/: BluePrint.canvas  Project_main.md
Markdown/.obsidian/: workspace.json
Markdown/Software/: JSON Data.md
backend/: client.py  embedding.py  fast.py  llm.py  sexyboy.py
backend/classes/: llm.py
frontend/: Home.py
frontend/pages/: Chat.py
(+3 files in other folders)
