[tool.poetry]
name = "emotional-core"
version = "0.1.0"
description = ""
authors = ["team GlaDos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, >=3.11, <3.13"
ultralytics = "^8.3.49"
streamlit = "^1.41.1"
faiss-cpu = "^1.9.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
